src/styles/v-components/_Fave.scss
.fave-quote-container {
    @include flex(column-reverse, between);
    width: 100%;
    background:$color-background;
    box-shadow: $box-shadow;
    height: 14rem;
}

.fave-quote {
    @include flex(row, center);
    width: 100%;
    height: 70%;
    padding: 1rem;
    background: $color-dark;
    color: $color-light;
    font-family: $font-family-primary;
    font-size: 1.5rem;
}

.remove-fave {
    &:hover:before{
        content: "x";
        transition: 1s;
    }
}

